# np-dist2

./: .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  analysis_effective_radius.py  analysis_lattice_distribution.py  noxfile.py  pyproject.toml  setup.py  test_integration.py  test_library.py  test_output.txt  usage.md
.github/workflows/: constraints.txt  release.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
examples/: basic_usage.py  sphere_points.py
full_data/res-2025-01-13/: Ag100angs_avg101.npy  Ag100angs_avg101_densities.npy  Ag100angs_avg101_lattice_params.npy  Ag100angs_avg101_radial_distances.npy  Ag30angs_avg101_densities.npy  Ag30angs_avg101_lattice_params.npy  Ag30angs_avg101_radial_distances.npy  Ag53angs_avg101.npy  Ag53angs_avg101_densities.npy  Ag53angs_avg101_lattice_params.npy  Ag53angs_avg101_radial_distances.npy  Ag78angs_avg101.npy  Ag78angs_avg101_densities.npy  Ag78angs_avg101_lattice_params.npy  Ag78angs_avg101_radial_distances.npy  test_output.txt
sample_data/res-2025-01-13/: Ag30angs_avg101.npy  Ag30angs_avg101_densities.npy  Ag30angs_avg101_lattice_params.npy  Ag30angs_avg101_radial_distances.npy  effective_radius_results.txt
src/np_dist2/: __init__.py  __main__.py  analysis.py  grid_generator.py  io.py  lattice.py  rotate3d.py
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_effective_radius_fcc.py  test_effective_radius_geometry.py  test_grid_generator.py  test_io.py  test_lattice.py  test_main.py  test_particle_analysis.py  test_pipeline.py  test_rotate3d.py  test_time_avg.py
